[gd_scene load_steps=21 format=3 uid="uid://6dlrgv7rgovn"]

[ext_resource type="PackedScene" uid="uid://b0dk8gsoe4wgw" path="res://Screens/GameScreen/Tabs/tab.tscn" id="1_sfv5i"]
[ext_resource type="Script" uid="uid://h4t80xg2j3yj" path="res://Screens/GameScreen/Tabs/Combat/combat_tab.gd" id="2_d5esk"]
[ext_resource type="PackedScene" uid="uid://ctkqbkp62y3av" path="res://Screens/GameScreen/Tabs/Combat/combat_panel.tscn" id="2_fs65j"]
[ext_resource type="PackedScene" uid="uid://c74nurywvrmkl" path="res://Graphic Elements/Buttons/super_button.tscn" id="3_o1rht"]
[ext_resource type="PackedScene" uid="uid://bwo13lkbktm1c" path="res://Screens/GameScreen/Tabs/Combat/Map/Encounters/Floor0/first_floor_map.tscn" id="4_doveg"]
[ext_resource type="PackedScene" uid="uid://cb0xb20pk0mpa" path="res://Images/SpriteSheets/sprite.tscn" id="4_w73yy"]
[ext_resource type="PackedScene" uid="uid://bg06kottiuyhf" path="res://Graphic Elements/developer_console.tscn" id="5_aly7l"]
[ext_resource type="Texture2D" uid="uid://bigtxt2g2ra65" path="res://Images/SpriteSheets/Icons_Sports.png" id="5_catpv"]
[ext_resource type="Texture2D" uid="uid://cjy3qauwwuqwl" path="res://Images/SpriteSheets/Icons_RPG.png" id="6_f6tcu"]
[ext_resource type="Theme" uid="uid://blwnh8rwgc0eh" path="res://Graphic Elements/Themes/mainTab.tres" id="6_hrq1d"]
[ext_resource type="Script" uid="uid://b5vxubufs31lb" path="res://Graphic Elements/BigTextPanel/big_text_panel_continue.gd" id="7_2lm74"]
[ext_resource type="PackedScene" uid="uid://cjahgospf76p4" path="res://Graphic Elements/faction_symbol.tscn" id="8_2jio1"]
[ext_resource type="Theme" uid="uid://toctfm8xh225" path="res://Graphic Elements/Themes/squareSuperButton.tres" id="8_hrq1d"]
[ext_resource type="PackedScene" uid="uid://c5uhhdm6s5ims" path="res://Graphic Elements/Buttons/my_button.tscn" id="9_n6jna"]
[ext_resource type="PackedScene" uid="uid://bvpfnn4luxf6o" path="res://Graphic Elements/elements.tscn" id="9_ugwap"]
[ext_resource type="PackedScene" uid="uid://b8u7rb34016g7" path="res://Graphic Elements/Tooltips/encyclopedia_text_label.tscn" id="10_n6jna"]
[ext_resource type="PackedScene" uid="uid://cocw3t3fhan13" path="res://Screens/GameScreen/Tabs/Combat/Map/big_floor_display.tscn" id="12_y6o0r"]
[ext_resource type="PackedScene" uid="uid://c5ntfqwe5yp37" path="res://Screens/GameScreen/ProceduralGeneration/procedural_generation_logic.tscn" id="13_y6o0r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6jna"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6o0r"]

[node name="CombatTab" groups=["Saveable"] instance=ExtResource("1_sfv5i")]
theme_override_styles/panel = SubResource("StyleBoxFlat_n6jna")
script = ExtResource("2_d5esk")

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]
layer = 2

[node name="ShopShortcuts" type="HBoxContainer" parent="CanvasLayer" index="0"]
offset_left = 15.0
offset_top = 15.0
offset_right = 60.0
offset_bottom = 15.0
mouse_filter = 2
theme_override_constants/separation = 15

[node name="routineButton" parent="CanvasLayer/ShopShortcuts" index="0" instance=ExtResource("3_o1rht")]
visible = false
layout_mode = 2
toggle = false

[node name="Sprite" parent="CanvasLayer/ShopShortcuts/routineButton/HBoxContainer" index="0" instance=ExtResource("4_w73yy")]
layout_mode = 2

[node name="Icon" parent="CanvasLayer/ShopShortcuts/routineButton/HBoxContainer/Sprite" index="0"]
scale = Vector2(3, 3)
texture = ExtResource("5_catpv")
region_rect = Rect2(7, 72, 31, 21)

[node name="armorButton" parent="CanvasLayer/ShopShortcuts" index="1" instance=ExtResource("3_o1rht")]
visible = false
layout_mode = 2
toggle = false

[node name="Sprite" parent="CanvasLayer/ShopShortcuts/armorButton/HBoxContainer" index="0" instance=ExtResource("4_w73yy")]
layout_mode = 2

[node name="Icon" parent="CanvasLayer/ShopShortcuts/armorButton/HBoxContainer/Sprite" index="0"]
scale = Vector2(3, 3)
texture = ExtResource("6_f6tcu")
region_rect = Rect2(23, 7, 11, 7)

[node name="weaponButton" parent="CanvasLayer/ShopShortcuts" index="2" instance=ExtResource("3_o1rht")]
visible = false
layout_mode = 2
toggle = false

[node name="Sprite" parent="CanvasLayer/ShopShortcuts/weaponButton/HBoxContainer" index="0" instance=ExtResource("4_w73yy")]
layout_mode = 2

[node name="Icon" parent="CanvasLayer/ShopShortcuts/weaponButton/HBoxContainer/Sprite" index="0"]
scale = Vector2(3, 3)
texture = ExtResource("6_f6tcu")
region_rect = Rect2(8, 7, 8, 6)

[node name="soulButton" parent="CanvasLayer/ShopShortcuts" index="3" instance=ExtResource("3_o1rht")]
visible = false
layout_mode = 2
toggle = false

[node name="Sprite" parent="CanvasLayer/ShopShortcuts/soulButton/HBoxContainer" index="0" instance=ExtResource("4_w73yy")]
layout_mode = 2

[node name="Icon" parent="CanvasLayer/ShopShortcuts/soulButton/HBoxContainer/Sprite" index="0"]
scale = Vector2(3, 3)
texture = ExtResource("6_f6tcu")
region_rect = Rect2(120, 38, 13, 10)

[node name="CombatPanel" parent="." index="1" instance=ExtResource("2_fs65j")]
visible = false
layout_mode = 1

[node name="MapContainer" type="Control" parent="." index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialMap" parent="MapContainer" index="0" instance=ExtResource("4_doveg")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1

[node name="DeveloperConsole" parent="." index="3" instance=ExtResource("5_aly7l")]

[node name="NarrativePanel" type="Panel" parent="." index="4"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_hrq1d")
theme_override_styles/panel = SubResource("StyleBoxFlat_y6o0r")
script = ExtResource("7_2lm74")
text = "Sample text"
title = "After the Fight"

[node name="VBoxContainer" type="VBoxContainer" parent="NarrativePanel" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="NarrativePanel/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Title" type="RichTextLabel" parent="NarrativePanel/VBoxContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "After the Fight"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="FactionSymbol" parent="NarrativePanel/VBoxContainer/VBoxContainer" index="1" instance=ExtResource("8_2jio1")]
visible = false
layout_mode = 2

[node name="Elements" parent="NarrativePanel/VBoxContainer/VBoxContainer" index="2" instance=ExtResource("9_ugwap")]
visible = false
layout_mode = 2
size_flags_horizontal = 1
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="NarrativePanel/VBoxContainer/VBoxContainer" index="3"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("8_hrq1d")

[node name="RichTextLabel" parent="NarrativePanel/VBoxContainer/VBoxContainer/PanelContainer" index="0" instance=ExtResource("10_n6jna")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
text = "Sample text"
vertical_alignment = 0

[node name="MyButton" parent="NarrativePanel/VBoxContainer" index="1" instance=ExtResource("9_n6jna")]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = " Continue "

[node name="FloorDisplay" parent="." index="5" instance=ExtResource("12_y6o0r")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 0.0
grow_horizontal = 0

[node name="ProceduralGenerationLogic" parent="." index="6" instance=ExtResource("13_y6o0r")]

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="wasSelected" from="CanvasLayer/ShopShortcuts/routineButton" to="." method="_on_routine_button_was_selected"]
[connection signal="wasSelected" from="CanvasLayer/ShopShortcuts/armorButton" to="." method="_on_armor_button_was_selected"]
[connection signal="wasSelected" from="CanvasLayer/ShopShortcuts/weaponButton" to="." method="_on_weapon_button_was_selected"]
[connection signal="wasSelected" from="CanvasLayer/ShopShortcuts/soulButton" to="." method="_on_soul_button_was_selected"]
[connection signal="defeat" from="CombatPanel" to="." method="_on_combat_panel_defeat"]
[connection signal="playerModifierDictionaryRequested" from="CombatPanel" to="." method="_on_combat_panel_player_modifier_dictionary_requested"]
[connection signal="playerPortraitRequested" from="CombatPanel" to="." method="_on_player_portrait_requested"]
[connection signal="playerSubclassRequested" from="CombatPanel" to="." method="_on_combat_panel_player_subclass_requested"]
[connection signal="retreat" from="CombatPanel" to="." method="_on_combat_panel_retreat"]
[connection signal="victory" from="CombatPanel" to="." method="_on_combat_panel_victory"]
[connection signal="weaponResourceRequested" from="CombatPanel" to="." method="_on_combat_panel_weapon_resource_requested"]
[connection signal="visibility_changed" from="MapContainer" to="." method="_on_map_container_visibility_changed"]
[connection signal="visibility_changed" from="MapContainer/TutorialMap" to="MapContainer/TutorialMap" method="_on_visibility_changed"]
[connection signal="consoleClosed" from="DeveloperConsole" to="." method="_on_developer_console_console_closed"]
[connection signal="consoleOpened" from="DeveloperConsole" to="." method="_on_developer_console_console_opened"]
[connection signal="setPlayerCore" from="DeveloperConsole" to="." method="_on_developer_console_set_player_core"]
[connection signal="pressed" from="NarrativePanel/VBoxContainer/MyButton" to="NarrativePanel" method="_on_my_button_pressed"]
[connection signal="floorDown" from="FloorDisplay" to="." method="_on_floor_display_floor_down"]
[connection signal="floorUp" from="FloorDisplay" to="." method="_on_floor_display_floor_up"]

[editable path="CanvasLayer/ShopShortcuts/routineButton"]
[editable path="CanvasLayer/ShopShortcuts/routineButton/HBoxContainer/Sprite"]
[editable path="CanvasLayer/ShopShortcuts/armorButton"]
[editable path="CanvasLayer/ShopShortcuts/armorButton/HBoxContainer/Sprite"]
[editable path="CanvasLayer/ShopShortcuts/weaponButton"]
[editable path="CanvasLayer/ShopShortcuts/weaponButton/HBoxContainer/Sprite"]
[editable path="CanvasLayer/ShopShortcuts/soulButton"]
[editable path="CanvasLayer/ShopShortcuts/soulButton/HBoxContainer/Sprite"]
